--- a/scss/form.scss
+++ b/scss/form.scss
@@ -3,7 +3,7 @@
 @use 'colors';
 @use 'layout';
 
-$border-color: #333;
+$border-color: #aaa;
 $error-color: colors.$error-color;
 $fieldset-margin: layout.$default-margin * 2;
 $body-padding: layout.$default-margin * 2;
