--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -79,6 +79,7 @@ $default-width: 240px;
     }
     &.center {
         align-items: center;
+        justify-content: center;
     }
 }
 
